--- a/ChuckNorrisApp/ChuckNorrisApp/ChuckNorrisUI/Base.lproj/Main.storyboard
+++ b/ChuckNorrisApp/ChuckNorrisApp/ChuckNorrisUI/Base.lproj/Main.storyboard
@@ -24,6 +24,51 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bgm-kk-CFB" id="tJO-Ho-QTd">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category example 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6jC-wT-sYs">
+                                            <rect key="frame" x="50" y="16" width="150" height="48"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="greaterthan" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="dZG-QS-fH5" userLabel="openCategory">
+                                            <rect key="frame" x="384" y="18" width="20" height="43.5"/>
+                                            <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="20" id="rD5-vr-F0T"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="dZG-QS-fH5" secondAttribute="bottom" constant="15" id="4Uc-zc-lwo"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="6jC-wT-sYs" secondAttribute="bottom" constant="5" id="6Y9-wn-K0e"/>
+                                        <constraint firstItem="dZG-QS-fH5" firstAttribute="top" secondItem="tJO-Ho-QTd" secondAttribute="top" constant="15" id="Bba-X8-UZI"/>
+                                        <constraint firstItem="6jC-wT-sYs" firstAttribute="leading" secondItem="tJO-Ho-QTd" secondAttribute="leadingMargin" constant="30" id="OVe-tU-fgP"/>
+                                        <constraint firstAttribute="trailing" secondItem="dZG-QS-fH5" secondAttribute="trailing" constant="10" id="XfL-1q-HV2"/>
+                                        <constraint firstItem="6jC-wT-sYs" firstAttribute="top" secondItem="tJO-Ho-QTd" secondAttribute="topMargin" constant="5" id="fMS-kt-iHt"/>
+                                        <constraint firstItem="dZG-QS-fH5" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6jC-wT-sYs" secondAttribute="trailing" constant="10" id="kS0-YK-JiL"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="80" id="ws1-51-dX3">
+                                <rect key="frame" x="0.0" y="108" width="414" height="80"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ws1-51-dX3" id="zQC-jq-HNu">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="0lM-tP-fI8">
+                                            <rect key="frame" x="187" y="20" width="40" height="40"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="0lM-tP-fI8" secondAttribute="height" multiplier="1:1" id="FLu-qX-QLA"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="pmE-AK-xNN"/>
+                                            </constraints>
+                                        </activityIndicatorView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="0lM-tP-fI8" firstAttribute="centerX" secondItem="zQC-jq-HNu" secondAttribute="centerX" id="J5E-mE-Gzc"/>
+                                        <constraint firstItem="0lM-tP-fI8" firstAttribute="centerY" secondItem="zQC-jq-HNu" secondAttribute="centerY" id="hRA-to-LTA"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -48,8 +93,31 @@
                     <view key="view" contentMode="scaleToFill" id="Avq-us-BCD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Joke example: Chuck Norris can divide by zero" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sNq-ZK-fCh">
+                                <rect key="frame" x="40" y="218" width="334" height="43"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="questionmark.square.dashed" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="4qF-Wh-P8K">
+                                <rect key="frame" x="177" y="134" width="60" height="57.5"/>
+                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="4qF-Wh-P8K" secondAttribute="height" multiplier="1:1" id="BHH-B6-sC4"/>
+                                    <constraint firstAttribute="height" constant="60" id="lkG-dK-EC3"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="mW4-dS-zZ4"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="mW4-dS-zZ4" firstAttribute="trailing" secondItem="sNq-ZK-fCh" secondAttribute="trailing" constant="40" id="a7u-V3-ZKa"/>
+                            <constraint firstItem="4qF-Wh-P8K" firstAttribute="top" secondItem="mW4-dS-zZ4" secondAttribute="top" constant="45" id="aln-tP-gjl"/>
+                            <constraint firstItem="sNq-ZK-fCh" firstAttribute="leading" secondItem="mW4-dS-zZ4" secondAttribute="leading" constant="40" id="eN4-5r-sHv"/>
+                            <constraint firstItem="sNq-ZK-fCh" firstAttribute="top" secondItem="4qF-Wh-P8K" secondAttribute="bottom" constant="25" id="lfY-1d-Fh9"/>
+                            <constraint firstItem="4qF-Wh-P8K" firstAttribute="centerX" secondItem="Avq-us-BCD" secondAttribute="centerX" id="nY9-d1-8TN"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="ZuZ-ZI-BzS"/>
                 </viewController>
@@ -83,6 +151,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="greaterthan" catalog="system" width="128" height="111"/>
+        <image name="questionmark.square.dashed" catalog="system" width="128" height="114"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
