--- a/ChuckNorrisApp/ChuckNorrisApp/ChuckNorrisUI/Base.lproj/Main.storyboard
+++ b/ChuckNorrisApp/ChuckNorrisApp/ChuckNorrisUI/Base.lproj/Main.storyboard
@@ -106,8 +106,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="questionmark.square.dashed" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="4qF-Wh-P8K">
-                                <rect key="frame" x="177" y="134" width="60" height="57.5"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="questionmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="4qF-Wh-P8K">
+                                <rect key="frame" x="177" y="134" width="60" height="58"/>
                                 <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="4qF-Wh-P8K" secondAttribute="height" multiplier="1:1" id="BHH-B6-sC4"/>
@@ -162,7 +162,7 @@
     </scenes>
     <resources>
         <image name="greaterthan" catalog="system" width="128" height="111"/>
-        <image name="questionmark.square.dashed" catalog="system" width="128" height="114"/>
+        <image name="questionmark" catalog="system" width="96" height="128"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
