--- a/ChuckNorrisApp/ChuckNorrisApp/ChuckNorrisUI/Base.lproj/Main.storyboard
+++ b/ChuckNorrisApp/ChuckNorrisApp/ChuckNorrisUI/Base.lproj/Main.storyboard
@@ -100,8 +100,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Joke example: Chuck Norris can divide by zero" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sNq-ZK-fCh">
-                                <rect key="frame" x="40" y="218" width="334" height="43"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sNq-ZK-fCh">
+                                <rect key="frame" x="40" y="218" width="334" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -129,6 +129,7 @@
                     <connections>
                         <outlet property="jokeImg" destination="4qF-Wh-P8K" id="G9u-jR-nw1"/>
                         <outlet property="jokeTextLabel" destination="sNq-ZK-fCh" id="Wsd-Gn-Y4W"/>
+                        <outlet property="navItem" destination="ZuZ-ZI-BzS" id="t86-Lc-MqL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JSL-os-TMa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
